--- a/comingsoon.html
+++ b/comingsoon.html
@@ -11,7 +11,7 @@
             padding:0;
             background-color: black;
             position: relative;
-            font-family: "Monsterrat","Raleway","Open Sans",sans-serif;
+            font-family: "Michroma","Raleway","Open Sans",sans-serif;
         }
         header {
     position: fixed;
@@ -67,8 +67,8 @@ nav a {
             white-space: nowrap;
             color:white;
             font-weight:300;
-            font-size: 3rem;
-            font-family: "Open Sans";
+            font-size: 2.5rem;
+            font-family: "Michroma";
         }
         .coming-soon {
     position: absolute; 
@@ -85,6 +85,7 @@ nav a {
     font-weight: 500;
     letter-spacing: 10px;
     opacity: 0;
+    font-family:"Michroma" ;
 }
 
 .socials {
