--- a/index.html
+++ b/index.html
@@ -3,109 +3,261 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coming Soon</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
-        @font-face {
-            font-family: 'HeadingFont';
-            src: url('MONSTER OF FANTASY.otf') format('opentype');
+        body{
+            margin:0;
+            padding:0;
+            background-color: black;
+            position: relative;
+            font-family: "Michroma","Raleway","Open Sans",sans-serif;
         }
+        header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
+    z-index: 10;
+    padding: 10px 20px; 
+    box-sizing: border-box; 
+    
+}
 
-        @font-face {
-            font-family: 'SubHeadingFont';
-            src: url('fantasy personal use.ttf') format('truetype');
+.logo {
+    width: 150px;
+    height: 50px;
+}
+
+.logo img {
+    width: 100%; 
+    height: auto; 
+}
+
+nav {
+    display: flex;
+    justify-content: flex-end; 
+    margin-top: 10px;
+    position: absolute;
+    right: 20px; 
+}
+
+nav a {
+    color: white;
+    text-decoration: none;
+    margin-left: 20px; 
+}
+        /*video*/
+        .myVideo, #myVideo{
+            width:100%;
+            height:auto;
         }
-
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            height: 100vh;
-            background: url('wp1892116 (1).png') no-repeat center center fixed;
-            background-size: cover;
-            color: #fff;
-            text-shadow: 0 3px 6px rgba(0, 0, 0, 0.7);
-            overflow-x: hidden; /* Prevent horizontal scrolling */
-        }
-
-        .header {
+        /*content*/
+        .content{
             position: absolute;
-            top: 20px;
-            left: 20px;
-            width: calc(100% - 40px); /* Prevent overflow */
-            max-width: 100%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0 10px; /* Reduce padding to avoid overflow */
-            box-sizing: border-box; /* Include padding in width calculation */
+            bottom:0;
+            left:50%;
+            top:50%;
+            transform: translate(-50% , -50% );
         }
-
-        .header img {
-            max-width: 150px; /* Use max-width instead of fixed width */
-            height: auto;
+        h1{
+            white-space: nowrap;
+            color:white;
+            font-weight:300;
+            font-size: 2.5rem;
+            font-family: "Michroma";
         }
+        .coming-soon {
+    position: absolute; 
+    text-align: center;
+    padding-top: 100px;
+    bottom:0;
+    left: 50%;
+    top:50%;
+    transform:translate(-50%,-50%);
+}
 
-        .header a {
-            font-family: 'HeadingFont', sans-serif;
-            font-size: 1.5rem;
-            color: #fff;
-            text-decoration: none;
-            font-weight: bold;
-        }
+.coming-soon h1 {
+    font-size: 3rem;
+    font-weight: 500;
+    letter-spacing: 6px;
+    opacity: 0;
+    font-family:"Michroma" ;
+}
 
-        .header a:hover {
-            text-decoration: underline;
-        }
+.socials {
+    display: flex;
+    justify-content: center;
+    margin-top: 70px;
+    opacity: 0;
+}
 
-        .content {
-            text-align: center;
-            padding: 0 10px; /* Prevent content from overflowing */
-            box-sizing: border-box;
-        }
+.socials a {
+    margin: 0 10px;
+    opacity: 0;
+    color:white;
+    transform: translateY(50px);
+    transition: opacity 0.3s ease, transform 0.5s ease;
+}
 
-        .content h1 {
-            font-family: 'HeadingFont', sans-serif;
-            font-size: 4rem;
-            margin-bottom: 1.5rem;
-        }
+.socials a svg {
+    width: 30px;
+    height: 30px;
+}
+@media (max-width: 768px) {
+    .myVideo, #myVideo {
+        width: auto;
+        height: 100vh; 
+        overflow: hidden;
+    }
+    .content {
+        position: absolute;
+        left: 50%;
+        bottom: 20%; 
+        transform: translate(-50%, -90%); 
+        text-align: center;
+        padding: 0 10px;
+    }
+    .content h1 {
+        white-space: normal; 
+        text-align: center;
+        font-size: 3.1rem; 
+    }
+}
 
-        .content p {
-            font-family: 'SubHeadingFont', sans-serif;
-            font-size: 2rem;
-            margin-bottom: 2.5rem;
-        }
+@media (max-width: 468px) {
+    /* Global Reset */
+    body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden; 
+        font-family: Arial, sans-serif; 
+    }
 
-        @media (max-width: 768px) {
-            .header img {
-                max-width: 100px; /* Use max-width instead of fixed width */
-            }
+    header {
+        position: fixed;
+        top: 0;
+        width: 100%;
+        display: flex;
+        justify-content: space-between; 
+        align-items: center;
+        padding: 5px 10px; 
+        z-index: 10;
+    }
 
-            .header a {
-                font-size: 1.2rem;
-            }
+    .logo {
+        width: 100px; 
+        height: auto; 
+    }
 
-            .content h1 {
-                font-size: 2.5rem;
-            }
+    .logo img {
+        width: 100%;
+        height: auto; 
+    }
 
-            .content p {
-                font-size: 1.5rem;
-            }
-        }
+    nav {
+        margin-top: 0; 
+        position: static; 
+    }
+
+    nav a {
+        color: white;
+        text-decoration: none;
+        font-size: 0.8rem; 
+        margin: 0 5px; 
+    }
+    /* Full-Screen Video Background */
+    .myVideo, #myVideo {
+        position: fixed; 
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh; 
+        object-fit: cover; 
+        z-index: -1; 
+    }
+
+    /* Centered Content */
+    .content {
+        position: absolute;
+        left: 50%;
+        bottom: 25%; 
+        transform: translate(-50%, -50%); 
+        text-align: center;
+        padding: 0 10px; 
+        color: #fff; 
+    }
+
+    /* Heading Styles */
+    .content h1 {
+        font-size: 1.6rem; 
+        line-height: 1.3; 
+        margin: 0;
+        word-break: break-word;
+    }
+
+    /* Coming Soon Section */
+    .coming-soon h1 {
+        font-size: 2rem; 
+        margin-top: 10px;
+    }
+
+    /* Social Icons */
+    .socials {
+        margin-top: 15px; 
+    }
+
+    .socials a svg {
+        width: 18px; 
+        height: 18px;
+        fill: #fff; 
+    }
+}
+
+
     </style>
 </head>
 <body>
-    <div class="header">
-        <img src="main logo.png" alt="Logo">
-        <a href="#">Gallery</a>
+    <header>
+        <div class="logo">
+            <img src="main logo(without theme).png" alt="">
+        </div>
+        <nav>
+            <a href="">Gallery</a>
+        </nav>
+    </header>
+    <div class="myVideo">
+        <video autoplay muted loop id="myVideo">
+            <source src="213407_medium.mp4" type="video/mp4">
+        </video>
+        <div class="content" id="content1">
+            <h1>In the stillness, secrets linger, waiting to be revealed…</h1>
+        </div>
+        <div class="content" id="content2">
+            <h1>Beneath the veil of stars, time unravels, and shadows shift…</h1>
+        </div>
+        <div class="content" id="content3">
+            <h1>Guided by the unseen,<br> the path becomes clear only to those who dare to follow...</h1>
+        </div>
+        <div class="coming-soon">
+            <h1>COMING SOON</h1>
+            <div class="socials">
+                <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
+                    <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"/>
+                  </svg></a>
+                <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+                    <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
+                  </svg></a>
+                <a href=""><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-twitter-x" viewBox="0 0 16 16">
+                    <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"/>
+                  </svg></a>
+            </div>
+        </div>
     </div>
-    <div class="content">
-        <h1>Coming Soon</h1>
-        <p>We are working hard to bring you something amazing!</p>
-    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="script.js"></script>
 </body>
 </html>
